# GenAlgo_practice

./: README.md  pyproject.toml
projects/simple_creatures/: interactive_run.ipynb
projects/simple_creatures/src/: brains.py  entities.py  gen_algo.py  stages.py  utils.py
