[tool.poetry]
name = "genalgo-practice"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "genalgo_practice"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
